--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "libe-apps-template",
   "version": "0.2.3",
   "private": true,
+  "homepage": "/apps/2020/04/tu-mitonnes",
   "dependencies": {
+    "chroma-js": "^2.1.0",
+    "colors": "^1.4.0",
     "libe-components": "^1.2.0",
     "libe-utils": "^1.0.1",
     "react": "^16.13.1",
